<resources>
    <string name="app_name">The Meme Machine</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_category">Select a Category</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="title_activity_submitcontent">Submit Content</string>
    <string name="title_activity_submitcontent_done">Submit Content</string>
    <string name="title_activity_contactus_done">Contact Us</string>
    <string name="title_activity_memedisplay">Meme #420</string>
    <string name="title_text"> <u>The Meme Machine</u> </string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="home_button">Home</string>
    <string name="contactus_button">Contact Us</string>
    <string name="submit_button">Submit</string>
    <string name="mainpage_blurb">What the hell are you doing here? Stop wasting your time, go Home...</string>
    <string name="select_category">Select a Category</string>
    <string name="generic_memes">Generic Memes</string>
    <string name="cat_egory">Cat-egory</string>
    <string name="onedoes_notcategory">One does not simply choose this category</string>
    <string name="auntie_memes">Memes your Auntie would love</string>
    <string name="vintage_memes">Vintage Memes</string>
    <string name="curated_tadhg">Curated by Tadhg</string>
    <string name="imgholder">ImageHolder</string>
    <string name="submit_query">Submit Query</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="query_txt">Query Text</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="thanks_forcontact">Thanks for Contacting us!</string>
    <string name="home_maybe">Home?</string>
    <string name="meme_420">Meme #420</string>
    <string name="submit_content">Submit Content</string>
    <string name="choose_file">Choose a file</string>
    <string name="contentSubmitted">Content Submitted!! Thank You</string>

</resources>
