<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">



    <Button
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:text="@string/home_button"
        android:textSize="20sp"
        android:textColorHighlight="#00BBD3"
        android:background="@drawable/colours"
        android:id="@+id/button"
        android:textColor="#0000FF"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginTop="61dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:background="#00BBD3"
        android:textColor="#FFFFFF"
        android:layout_height="55dp"
        android:text="@string/contactus_button"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="@string/submit_button"
        android:id="@+id/button3"
        android:background="#00BBD3"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainpage_blurb"
        android:textSize="26sp"
        android:textAlignment="center"
        android:id="@+id/textView"
        android:layout_marginTop="27dp"
        android:textColor="#676768"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_text"
        android:textSize="34sp"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#0000FF" />

</RelativeLayout>
