<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageButtonHome"
        android:src="@drawable/menu_button"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00BBD3"
        android:text="@string/submit_query"
        android:id="@+id/textView11"
        android:layout_below="@+id/imageButtonHome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="51dp"
        android:layout_marginStart="51dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/textView11"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:layout_alignRight="@+id/imageButtonHome"
        android:layout_alignEnd="@+id/imageButtonHome" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginTop="18dp"
        android:layout_alignRight="@+id/imageButtonHome"
        android:layout_alignEnd="@+id/imageButtonHome" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/query_txt"
        android:id="@+id/editText3"
        android:layout_below="@+id/editText2"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginTop="27dp"
        android:layout_alignRight="@+id/imageButtonHome"
        android:layout_alignEnd="@+id/imageButtonHome" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/button4"
        android:layout_marginBottom="23dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_alignRight="@+id/textView11"
        android:layout_alignEnd="@+id/textView11" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/button5"
        android:layout_alignTop="@+id/button4"
        android:layout_alignRight="@+id/imageButtonHome"
        android:layout_alignEnd="@+id/imageButtonHome"
        android:layout_toRightOf="@+id/button4"
        android:layout_toEndOf="@+id/button4" />

</RelativeLayout>